force-app/main/default/objects/EinsteinVision__c/EinsteinVision__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Einstein Vision</label>
</CustomObject>