force-app/main/default/objects/EinsteinVision__c/fields/CertificatePart_10__c.field-meta.xml
<CustomField>
    <fullName>CertificatePart_10__c</fullName>
    <label>CertificatePart_10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>