force-app/main/default/objects/EinsteinVision__c/fields/CertificatePart_1__c.field-meta.xml
<CustomField>
    <fullName>CertificatePart_1__c</fullName>
    <label>CertificatePart_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>