force-app/main/default/objects/EinsteinVision__c/fields/CertificatePart_2__c.field-meta.xml
<CustomField>
    <fullName>CertificatePart_2__c</fullName>
    <label>CertificatePart_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>